# RepoGraph

./: .gitignore  .mcp.json.example  DECISIONS.md  LICENSE  Makefile  README.md  RepoGraph-模糊语义处理-落地设计.md  pyproject.toml
design_work/: _a4_verify_concepts.json  _build_review_c.py  _concept_names_dump.txt  _ctx_phaseC.diff  _d1_graph.py  _probe_linked.py  _rev_D1.txt  _rev_D2.txt  _rev_gate.txt  _rev_spec.txt  arch-adapt.md  build_grok_prompts.py  c2_calibration.json  c2_calibration.py  c2_cards.round1.json  c2_cards.round2.json  c2_cards.round3.json  c2_gen_cards.py  c2_merge_cards.py  d1_build.py  d1_goldcheck.py  d3_f9.json  d3_f9.py  e2_acceptance.md  e2_acceptance_probe.py  e3_walkthrough.md  eval-design.md  gap-matrix.md  gen_dataset.py  grok-review.md  grok_out_seg1.txt  grok_out_seg2.txt  grok_prompt_seg1.txt  grok_prompt_seg2.txt  rg_exp_lib.py  run_grok.py  v0_calibration.json  v0_calibration.py  v1_backfill_card.py  v1_cards.json  (+16 more)
design_work/review_c/: F_llm_client.txt  (+33 more)
docs/: RepoGraph-v0.3-spec.md  RepoGraph-v0.3-执行计划书.md  RepoGraph-技术设计文档.md  v0.3-asbuilt.md
eval/: baseline_bm25.py  calibration.md  d2_results.json  dataset.jsonl  dataset_main.jsonl  gate.py  gate_report.json  report.md  run_d2.py
output/: align_audit.jsonl  graph.html  graph.json  repo_card.json  stats.json
tests/: test_ast_extractor.py  test_callgraph.py  test_cli.py  test_context.py  test_enrich.py  test_git_extractor.py  test_impact_stats.py  test_lexicon.py  test_mcp_server.py  test_metrics.py  test_router.py  test_semantic.py  test_semantic_grokfix.py  test_topic.py  test_viz.py
(+45 files in other folders)
