[project]
name = "repograph"
version = "0.1.0"
description = "RepoGraph — 代码知识图谱与混合检索系统（结构层确定性抽取 + LLM 语义层）"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "GitPython>=3.1",
    "networkx>=3.0",
    "matplotlib>=3.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
repograph = "repograph.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
